--- a/translations/cs/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/cs/LC_MESSAGES/wesnoth-ala.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2020-10-25 21:12 UTC\n"
-"PO-Revision-Date: 2022-02-10 23:31+0100\n"
+"PO-Revision-Date: 2022-02-14 23:37+0100\n"
 "Last-Translator: Septim <septim@centrum.cz>\n"
 "Language-Team: \n"
 "Language: cs\n"
@@ -1414,6 +1414,39 @@ msgid ""
 "lands he had crossed were wild, uninhabited and, above all, not claimed by "
 "anyone."
 msgstr ""
+"Málokdo, dokonce i mezi největšími hodnostáři říše, ví, že východní hranice "
+"Wesnothu sahají daleko za Východní vrchy!\n"
+"Vše začalo, když královna Lisar, jež nově usedla na trůn, zorganizovala "
+"sérii expedic, které obepluly kontinent Irdya, aby určily jeho rozlohu a "
+"určily podobu jeho pobřeží. Jedna z těchto výprav, které velel admirál "
+"Abelardo Gozman, opustila Elensefar na jaře roku 520 w. l. a zamířila na "
+"sever. Po téměř dvouleté cestě, kterou téměř celou strávila průzkumy a "
+"výzkumy ve studených severských mořích, se Gozmanova výprava dostala k "
+"východnímu pobřeží kontinentu a poté i k malé zátoce u ústí řeky, obývané "
+"malou komunitou mořských nymf – Nereid.\n"
+"Výpočty, které Gozman prováděl, ho přivedly k podezření, že Štiplavý močál, "
+"který v té době představoval východní hranici lidského poznání kontinentu "
+"Irdya, musí být víceméně na půli cesty mezi východním a západním pobřežím "
+"tohoto kontinentu. Gozman potom vybral malou skupinu mužů, kteří se pod "
+"velením kapitána Guberta Piegafetty a s pomocí Nereid vydali proti toku "
+"řeky, aby zjistili, jak daleko na západě se nachází její pramen. Následně "
+"Gozman pokračoval v cestě. Neodvažoval se, vzhledem k náladě na lodích, jimž "
+"velel, čelit nejistým situacím, které by se mohly vynořit při cestě na jih a "
+"tak se na zpáteční cestu do Elensefaru vydal již poznanou a v jistém smyslu "
+"bezpečnější severní cestou!\n"
+"Admirál Abelardo Gozman se dokázal vrátit do Elensefaru, kam dorazil koncem "
+"léta roku 523 w. l. Když připlul, dostalo se mu poct a slávy, ale především "
+"se k němu dostala úžasná zpráva, že jeho poručík Guberto Piegafetta dorazil "
+"do Weldynu již před několika měsíci.\n"
+"Piegafetta totiž během plavby po Jantarové řece (dále bude osvětleno, proč "
+"tak byla nazvána) zjistil nejen to, že řeka pramení ve Štiplavém močálu, ale "
+"také, že je snadno splavná až téměř k bažině, alespoň pro malý člun, jako "
+"byl ten, na kterém plul.\n"
+"Piegafetta s sebou přivezl dvě věci velké důležitosti, charakterizující "
+"divokou krajinu, kolem Jantarové řeky. První věcí bylo několik kusů zlatého "
+"jantaru, které Nereidy běžně nacházely mezi oblázky na dně svého zálivu. "
+"Druhou věcí byla okolnost, že země, co prošel, jsou divoké, neobydlené a "
+"hlavně si je nikdo nenárokuje."
 
 #: A_Little_Adventure/utils/ALA_story.cfg:17
 msgid ""
@@ -1443,6 +1476,28 @@ msgid ""
 "experienced a long period of prosperity, becoming a town so important as to "
 "deserve the title of Capital of the wilds, until... fashion changed!"
 msgstr ""
+"Zatímco nedostatek suverenity nad divokými zeměmi okamžitě zaujal vládnoucí "
+"rod Wesnothu, jantar okamžitě zaujal obchodníky ze Soradoku. Ti na místě, "
+"kde Jantarová řeka přestávala být splavná, založili základnu a z ní začali "
+"posílat čluny do Nereidského zálivu. Základna se brzy stala prosperujícím "
+"městem, které bylo pojmenováno Amoran.\n"
+"Problémy začaly brzy ustavení obchodu s jantarem. Skřeti, kteří žili mezi "
+"Jantarovou řekou Lintanirským lesem, se na veškerý říční provoz wesnothských "
+"člunů nedívali příznivě a chovali se tak, jak jsou skřeti v těchto případech "
+"zvyklí jednat. Na obou stranách bylo několik obětí a objevily se různé "
+"partyzánské nájezdy, trestné výpravy i represálie. Nakonec, když příjmy "
+"z dopravy jantaru podél řeky přestaly stačit na pokrytí vojenských výdajů "
+"nezbytných k udržení říčního provozu, bylo se skřety dosaženo kompromisu.\n"
+"Skřeti uznali suverenitu Wesnothu v divočině jižně od Jantarové řeky, v "
+"oblasti mezi Štiplavým močálem a východním pobřežím kontinentu, ale "
+"Wesnothské království muselo zaručit neutralitu řeky. Obě strany se zavázaly "
+"neprovozovat říční dopravu jakéhokoli druhu a pro jakýkoli účel. V roce 536 "
+"w. l. byly stejné smlouvy potvrzeny také nově zrozenou Severní aliancí.\n"
+"Následně byla zřízena karavanní stezka, která víceméně sledovala tok "
+"Jantarové řeky přes Divočinu. Tak se jantar vrátil do Amoranu a odtud do "
+"celého království Wesnoth. Amoran zažil dlouhé období prosperity a stal se "
+"městem tak významným, že si zasloužil titul hlavní město Divočiny, dokud... "
+"se móda nezměnila!"
 
 #: A_Little_Adventure/utils/ALA_story.cfg:25
 msgid ""
@@ -1475,6 +1530,30 @@ msgid ""
 "otherwise, in no way could Amoran have survived to those calamitous events! "
 "Instead it survived, and... another day, another time, the wind changed!"
 msgstr ""
+"Wesnothským šlechticům a boháčům se jantar omrzel. Pro své vlastní potěšení, "
+"ješitnost svých laskavých manželek a potěšení svých horlivých milenek začali "
+"dávat přednost pestrobarevným drahým kamenům, které trpaslíci kutali ze "
+"svých hor, a které bylo možné získat snadněji než jantar, který se jim "
+"dostával do rukou s mnohem většími peripetiemi.\n"
+"S poklesem a nakonec i zastavením dopravy jantaru upadal i Amoran, pomalu a "
+"důstojně jako stará dáma. Počet obyvatel postupně ubýval, živnosti končily, "
+"kamenné zdi byly příliš drahé na údržbu a tam, kde se zřítily, byly "
+"nahrazeny dřevěnými palisádami. Posádka, kdysi početná, se zredukovala na "
+"hrstku vojáků, pečlivě vybraných z těch, kteří kvůli nedostatku peněz a "
+"postavení nemohli odmítnout tuto nepříjemnou službu. Obdělávaná pole se "
+"stala jediným zdrojem bohatství obyvatel, došlo k poklesu finančních toků a "
+"také k prořídnutí řad obchodníků.\n"
+"Jediným prvkem civilizované krajiny, který neutrpěl tak dramatický úpadek, "
+"byli lupiči. Ti se však stali zoufalejšími, a tedy zuřivějšími než dříve!\n"
+"Amoran si udržel titul hlavního města provincie, byl ale fakticky podřízen "
+"autoritě důležitějšího města Soradoku. Ale Soradok byl daleko. Amoran byl za "
+"močálem, za kopci, ale především za obzorem zájmu autorit Soradoku. A tak si "
+"lze představit, jak se Amoran vzdálil zájmu těch, kteří vládli ve Weldynu.\n"
+"Město, nyní zredukované na vesnici, se stalo tak nedůležitým, že ho "
+"nepostihla velká invaze nemrtvých roku 625 w. l., přestože nejspíš začala "
+"v nedalekých Východních vrších. To bylo štěstí, protože by Amoran v žádném "
+"případě nemohl tyto katastrofální události přežít! Obec přežila a... v jiný "
+"den, v jiném čase došlo k náhle změně poměrů!"
 
 #: A_Little_Adventure/utils/ALA_story.cfg:33
 msgid ""
@@ -1977,7 +2056,7 @@ msgstr ""
 #: A_Little_Adventure/scenarios/03_The_Nagas_Nest.cfg:200
 #: A_Little_Adventure/scenarios/05_The_Lizards_Islands.cfg:106
 msgid "Death of Glauco"
-msgstr ""
+msgstr "Glauko zemře"
 
 #. [objective]: condition=lose
 #: A_Little_Adventure/scenarios/06_The_Last_Battle.cfg:46
@@ -2226,7 +2305,7 @@ msgstr ""
 #: A_Little_Adventure/scenarios/02b_Battle_with_the_Orcs.cfg:83
 #: A_Little_Adventure/scenarios/02b_Battle_with_the_Orcs.cfg:258
 msgid "End of turns"
-msgstr ""
+msgstr "Vyprší počet kol"
 
 #. [message]: speaker=Ranfy
 #: A_Little_Adventure/scenarios/02a_Battle_with_the_Bandits.cfg:335
@@ -2307,7 +2386,7 @@ msgstr ""
 #. [scenario]: id=02b_Battle_with_the_Orcs
 #: A_Little_Adventure/scenarios/02b_Battle_with_the_Orcs.cfg:5
 msgid "Battle with the Orcs"
-msgstr ""
+msgstr "Bitva se skřety"
 
 #. [objective]: condition=win
 #: A_Little_Adventure/scenarios/02b_Battle_with_the_Orcs.cfg:71
