add a script for updating translations
also fix textdomain for female ogres so they show up in the potfile

--- a/translations/cs/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/cs/LC_MESSAGES/wesnoth-ala.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2022-02-18 00:59 UTC\n"
+"POT-Creation-Date: 2022-02-19 19:09 UTC\n"
 "PO-Revision-Date: 2022-02-14 23:37+0100\n"
 "Last-Translator: Septim <septim@centrum.cz>\n"
 "Language-Team: \n"
@@ -2046,6 +2046,35 @@ msgstr "omráčená"
 msgid "stunned"
 msgstr "omráčený"
 
+#. [unit_type]: id=She Ogre, race=ogre
+#: A_Little_Adventure/units/She_Ogre.cfg:6
+#, fuzzy
+#| msgid "Ogres"
+msgid "She Ogre"
+msgstr "Obři"
+
+#. [unit_type]: id=She Ogre, race=ogre
+#. reworded a bit:
+#: A_Little_Adventure/units/She_Ogre.cfg:24
+msgid ""
+"A bit less stupid than their male counterparts, the ogre females spend the "
+"first part of their lives learning how use herbs and minerals to cure wound "
+"and poisons, and secondly, how to apply this knowledge to the male ogres. "
+"They don't like iron weapons, but rather, they efficently use small but hard "
+"clubs of wood, and leather slings, to defend themselves."
+msgstr ""
+
+#. [attack]: type=impact
+#: A_Little_Adventure/units/She_Ogre.cfg:44
+#: A_Little_Adventure/units/Matronly_Ogresses.cfg:44
+msgid "club"
+msgstr ""
+
+#. [attack]: type=impact
+#: A_Little_Adventure/units/She_Ogre.cfg:53
+msgid "sling"
+msgstr ""
+
 #. [unit_type]: id=Naga Sentinel, race=naga
 #: A_Little_Adventure/units/Naga_Sentinel.cfg:5
 msgid "Naga Sentinel"
@@ -2063,6 +2092,21 @@ msgstr ""
 "vyzbrojené než většina nág. Vládnou velkým palcátem, kterým ubíjí své "
 "nepřátele. Většinou hlídají základny nebo příbytky, ale někdy se přidávají k "
 "útočným zátahům."
+
+#. [unit_type]: id=Matronly Ogresses, race=ogre
+#: A_Little_Adventure/units/Matronly_Ogresses.cfg:6
+#, fuzzy
+#| msgid "Giant Ogre"
+msgid "Matronly Ogre"
+msgstr "Obrovský obr"
+
+#. [unit_type]: id=Matronly Ogresses, race=ogre
+#: A_Little_Adventure/units/Matronly_Ogresses.cfg:24
+msgid ""
+"As they grow older, she-ogres gain weight, so they lose the agility "
+"necessary to use a sling, but, in exchange, they gain the capability to use "
+"a bigger and better club."
+msgstr ""
 
 #. [unit_type]: id=Merman Citizen, race=merman
 #: A_Little_Adventure/units/Citizen.cfg:5
